# rust-web-app-example

./: docker-compose.yml
example_app/: Cargo.toml  models.rs
example_app/migrations/2023-10-10-044710_create_products/: down.sql  up.sql
example_app/migrations/2023-10-11-141703_create_variants/: down.sql  up.sql
example_app/src/: main.rs  models.rs  schema.rs
